- fixed a bug in the symmetry operations of space group 166 (R-3m).
- fixed a bug when writing LAMMPS data files (*.lmp): if atom types were defined, the types written in the "Masses" section did not match the atom types used in the "Atoms" section.
- fixed a bug when reading Quantum Espresso output files (*.out) in mode "--one-in-all".
- fixed a bug in option "-cut", where Miller indices were assumed to refer to an orthogonal box. Now the actual box vectors are used.
- fixed a bug in option "-separate", that caused a segfault when the radius was too large.
- program now warns when atoms of same species have the same value of "type" defined as auxiliary property.
- scripts "install.sh" now proposes to install in user's home directory.


Beta 0.10.6 (07 Sept. 2018)
---------------------------
- in mode "--polycrystal", fixed a bug where the two crystals were not aligned when generating bicrystals.


Beta 0.10.5 (05 Sept. 2018)
---------------------------
- in option "-dislocation", fixed a bug in the creation of dislocation loops with a square shape. Thanks to Yong Zhang, Monash University, Clayton, Australia, for pointing out this bug.


Beta 0.10.4 (03 Sept. 2018)
---------------------------
- in mode "--polycrystal", fixed a bug where atoms were duplicated when generating 2-D polycrystals.


Beta 0.10.3 (04 July 2018)
--------------------------
- in mode "--create", added possibility to generate the LiMO2 structure (where M is a transition metal). Thanks to Raoul Aurelien Ngayam Happy, Paul Sherrer Institute, Switzerland, for implementing this feature.
- in option "-select", added possibility to select particles that have the minimum or maximum value of a property. Also added the possibility to combine a new selection to the existing one (add, remove, intersect, xor). Also added the possibility to select atoms inside or outside of a cone.